# CloudComTest

./: .docker.example.env  .gitignore  README.md  docker-airflow.yml  pyproject.toml
config/: airflow.cfg
dags/: csv_to_t1.py  t1_to_s3.py  t1_to_t2.py
dags/db/: models.py  session.py
db/: models.py  session.py
postgres_init/: 01_init_tables.sql
