[project]
name = "cloudcomtest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-amazon>=9.27.0",
    "boto>=2.49.0",
    "boto3>=1.43.2",
    "psycopg>=3.3.3",
    "sqlalchemy>=2.0.49",
]
